add: react training sessions 1-3

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "start": "mdx-deck deck.mdx",
-    "build": "mdx-deck build deck.mdx",
+    "start": "mdx-deck react-session-3.mdx",
+    "build": "mdx-deck build react-session-3.mdx",
     "test": "echo \"there are no tests\""
   },
   "devDependencies": {
